--- a/index.html
+++ b/index.html
@@ -21,6 +21,11 @@ h1 {
 	margin-top: 20px;
 	margin-bottom: 20px;
 }
+h2 {
+	text-align: center;
+	margin-top: 10px;
+	margin-bottom: 10px;
+}
 img {
   width: 100%; /* 或者其他固定宽度 */
   height: auto;
@@ -238,25 +243,34 @@ img {
 </head>
 <body>
 <div class="container">
-  <div class="logo"><img src="logo.png"></div>
+  <div class="logo"><img src="https://picx.zhimg.com/80/v2-b9522dc3cdefaef42391f4773915315c_720w.png"></div>
   <h1>云服务器价格表</h1>
   <div class="section-title">供应商选择</div>
   <div class="provider-cards">
     <div class="provider-card active" data-type="gcore">
-      <h3>Gcore</h3>
-      <p>适用于需要更新的应用程序和虚拟机，例如生产网站、CI/CD、视频转码或更大的网页。</p>
+      <h2>GC · 云服务器</h2>
+      <p>购前说明：<br>1、禁止长时间跑满带宽<br>
+        2、删除重建 = 5元 / 次 （丢失全部数据）<br>
+        3、更换IP = 5元 / 次 （丢失全部数据）<br>
+      4、不支持重装系统<br>5、使用WS传输协议会被官方封禁</p>
     </div>
     <div class="provider-card" data-type="pq">
-      <h3>PQ hosting</h3>
-      <p>适用于具有完整独立应用程序的虚拟机，例如生产集群等、缓存、CMS、开发/测试环境和小型数据库。</p>
+      <h2>PQ · 云服务器</h2>
+      <p>购前说明：<br>1、禁止长时间跑满带宽<br>
+        2、不支持换IP<br>
+        3、重装系统 = 3元 / 次</p>
     </div>
   </div>
   <div class="section-title">选择位置</div>
   <div class="location-section">
     <div class="location-tabs">
       <button class="location-tab active">所有地点</button>
-      <button class="location-tab">亚太地区</button>
+      <button class="location-tab">亚洲</button>
       <button class="location-tab">美洲</button>
+      <button class="location-tab">欧洲</button>
+      <button class="location-tab">非洲</button>
+      <button class="location-tab">中东</button>
+      <button class="location-tab">澳大利亚</button>
     </div>
     <div class="location-grid" id="locationGrid">
       <!-- 位置将通过JavaScript动态生成 -->
