--- a/index.html
+++ b/index.html
@@ -180,6 +180,7 @@ img {
 	background: white;
 	border-radius: 6px; /* Updated border-radius */
 	border: 1px solid #e4e9f0; /* Updated border */
+	margin-bottom: 20px;
 }
 .config-table {
 	width: 100%;
