--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="shortcut icon" href="favicon.png" />
+<link rel="shortcut icon" href="https://picx.zhimg.com/80/v2-d178a52dc000ea3b58c7fd38680277e3_720w.png" />
 <title>REM蕾姆の小店 云服务器价格表</title>
 <style>
 * {
